--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -1,25 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>CRM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        body{
-            background-color: #ebeff5;
-        }
-
-        #total-orders{
-            background-color: #4cb4c7;
-        }
-        
-        #orders-delivered{
-            background-color: #7abecc;
-        }
-
-        #orders-pending{
-            background-color: #7CD1C0;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
 </head>
 <body>
     {% include 'accounts/navbar.html' %}
