--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -12,12 +12,14 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href="{% url 'home' %}">Dashboard</a>
-        <a class="nav-item nav-link" href="{% url 'products' %}">Products</a>
+    {% if request.user.is_staff %}
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="{% url 'home' %}">Dashboard</a>
+          <a class="nav-item nav-link" href="{% url 'products' %}">Products</a>
 
-      </div>
+        </div>
+      {% endif %}
     </div>
     <span id="hello-msg">Hello,{{request.user}}</span>
     <span> <a href="{% url 'logout' %}">logout</a></span>
